--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,20 @@
 [versions]
-agp = "8.8.2"
-kotlin = "2.0.21"
-devtoolsKsp = "2.0.21-1.0.27"
-coreKtx = "1.16.0"
+agp = "8.8.1"
+kotlin = "2.0.0"
+coreKtx = "1.10.1"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.1"
-composeBom = "2025.04.00"
-navCompose = "2.8.9"
-roomRuntime = "2.7.0"
-datastorePreferences = "1.1.4"
-
+junitVersion = "1.1.5"
+espressoCore = "3.5.1"
+lifecycleRuntimeKtx = "2.6.1"
+activityCompose = "1.8.0"
+composeBom = "2024.04.01"
+retrofit = "2.10.0"
+moshiKotlin = "1.9.3"
+coilCompose = "2.7.0"
+credentials="1.5.0"
+googleid="1.1.1"
+datastorePreferences="1.1.4"
+androidImageCroper = "4.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,17 +32,17 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
-
-androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navCompose"}
-androidx-room-compiler = {group = "androidx.room", name = "room-compiler", version.ref = "roomRuntime"}
-androidx-room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "roomRuntime"}
-androidx-room-runtime = {group = "androidx.room", name = "room-runtime", version.ref = "roomRuntime"}
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences"}
-
-
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
+moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiKotlin" }
+coil-compose = { module = "io.coil-kt:coil-compose",  version.ref = "coilCompose" }
+androidx-credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
+androidx-credentials-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
+googleid = {group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+android-image-cropper = { module = "com.vanniktech:android-image-cropper", version.ref = "androidImageCroper" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "devtoolsKsp"}
